TEST_PROGRAMS/VALID/01/#26.2.go
package main

func main() {
  if v := 2; true {
    ;
  } else {
    ;
  }
}
