TEST_PROGRAMS/INVALID/01/#28.1.go
package main

func main() {
  for v := 1; v; 2 {
    ;
  }

  for v {
    ;
  }

  for () {
    ;
  }
}
